[build-system]
requires = ["setuptools >= 61.0",]
build-backend = "setuptools.build_meta"

[project]
name = "datawrapper-json-bookmarklet"
version = "1.0.0"
requires-python = "==3.12.0"
dependencies = [
    "sphinx",
    "sphinx-autobuild",
    "sphinxcontrib-mermaid",
    "myst-parser",
    "sphinx-palewire-theme",
]
authors = [
  { name="Ben Welsh", email="b@palewi.re" },
]
description = "A bookmarklet for quickly accessing the JSON configuration of your Datawrapper chart "
license = {text = "MIT"}
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]